--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0px;
-  background-image: url("wallpaper.jpg");
+  background-image: url("../wallpaper.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
