--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,20 @@ body {
   background-repeat: no-repeat;
   overflow: hidden;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  border: 1px solid #e7e7e7;
+  background-color: #f3f3f3;
+}
+
+li {
+	display: inline-block;
+}
