--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+body {
+  margin: 0px;
+  background-image: url("../wallpaper.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
