--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@ body {
   background-repeat: no-repeat;
   overflow: hidden;
   font-family: Segoe UI;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 ul {
