--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ li:hover {
   background-color: #f1f1f1;
   text-align: center;
   border: 1px solid #d3d3d3;
+  text-align: left;
 }
 
 #mydivheader {
