--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ li:hover {
 
 /* Window */
 #mydiv {
+  border-radius: 10px;
   position: absolute;
   z-index: 9;
   background-color: #f1f1f1;
@@ -66,6 +67,7 @@ li:hover {
 }
 
 #mydivheader {
+  border-radius: 10px 10px 0px 0px;
   padding: 10px;
   cursor: move;
   z-index: 10;
