--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ li:hover {
   border-radius: 10px;
   position: absolute;
   z-index: 9;
-  background-color: #f1f1f1;
+  background-color: rgb(241,241,241, .8);
   text-align: center;
   border: 1px solid #d3d3d3;
   text-align: left;
