--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ li:hover {
 }
 
 /* Window */
-#mydiv {
+.window {
   border-radius: 10px;
   position: absolute;
   z-index: 9;
@@ -66,7 +66,7 @@ li:hover {
   text-align: left;
 }
 
-#mydivheader {
+.headers {
   border-radius: 10px 10px 0px 0px;
   padding: 10px;
   cursor: move;
